--- a/index.html
+++ b/index.html
@@ -35,16 +35,17 @@
 </header>
     <div class="banner">
      <div class="banner--content">
+        <div class="container">
        <h2 class="banner--title">01</h2>
         <p class="banner--txt">This Lorem ipsum dolor si ipsam non non neque, blanditiis harum rem dicta!</p>
      </div> 
     </div>
-    
+ </div>     
 
     <main class="main">
         <section class="welcome">
             <h2 class="section--title">WELCOME</h2>
-           <p class="welcome--txt">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, culpa!</p>
+           <p class="welcome--txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ab ipsam suscipit minima optio, pariatur nulla unde illo qui officiis.!</p>
            <a href="" class="welcome--btn">READ MORE...</a>
         </section>
         <section class="container--design">
@@ -119,33 +120,76 @@
     </main>
 
     <footer class="main-footer">
+        <div class="container">
         <div class="column column--50-25">
             <h2 class="footer--title">COMPAÑIA</h2>
-            <p class="column -txt">--50-25Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum quos quae animi cumque soluta. Harum, vero dolor? Asperiores, labore aperiam?</p>
-            <p class="footer--autor">Adan Ruiz, MD</p>
+            <p class="column--txt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum quos quae animi cumque soluta. Harum, vero dolor? Asperiores, labore aperiam?</p>
+            <cite class="footer--autor">Adan Ruiz, MD</cite>
         </div>
 
 
         <div class="column column--50-25">
             <h2 class="footer--title">TWEETS</h2>
             <p class="footer--txt"><i class="fab fa-twitter"></i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere, explicabo!</p>  
-            <a href="" class="footer--link"></a> 
+            <a href="" class="footer--link">https://JOB'SFOREVER.com</a>
+            <p class="footer--date">Lorem ipsum dolor sit amet.</p>
+
+            <p class="footer--txt"><i class="fab fa-twitter"></i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere, explicabo!</p>  
+            <a href="" class="footer--link">https://JOB'SFOREVER.com</a>
+            <p class="footer--date">Lorem ipsum dolor sit amet.</p>
         </div>
  
 
         <div class="column column--50-25">
             <h2 class="footer--title">REDES</h2>
+            <div class="footer--socials">
+
+              <div class="social-icon">
+                <i class="fab fa-facebook-f"></i>
+                <a class="social--link" href="">Like Us On Facebook</a>
+              </div>
+
+              <div class="social-icon">
+                <i class="fab fa-twitter"></i>
+                <a class="social--link" href="">Like Us On Twiter</a>
+              </div>
+
+              <div class="social-icon">
+                <i class="fab fa-tiktok"></i>
+                <a class="social--link" href="">Follow Us On Tik Tok</a>
+              </div>
+
+              <div class="social-icon">
+                <i class="fab fa-github-square"></i>
+                <a class="social--link" href="">Follow Us On Git Hub</a>
+              </div>
+
+           </div>
         </div>
 
-
         <div class="column column--50-25">
-            <h2 class="footer--title">CONTACTATE</h2>
-        </div>r
-        <p class="copy"></p>
+            <h2 class="footer--title">CONTACTO</h2>
+
+            <div class="contact-icon">
+                <i class="fas fa-map-marker-alt"></i>
+                <p class="contact--txt" href="">La Empresa</p>
+            </div>
+
+            <div class="contact-icon">
+                <i class="fas fa-phone-alt"></i>
+                <p class="contact--txt" href="">(+51) 977-360-947</p>
+            </div>
+
+            <div class="contact-icon">
+                <i class="fas fa-envelope"></i>
+                <p class="contact--txt" href="">mamao_latuya@gmail.com</p>
+            </div>
+          </div>
+        </div>
+        <p class="copy">@ 2021 JOB'S FOREVER. ALL RIGHTS RESERVED DESIGN BY<span class="color-span"> DANIEL SP </span> </p>
     </footer>
 
 
     <script src="js/menu.js"></script>
-
 </body>
 </html>
