--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
             <p class="testimonio--name">JESUS MARTINEZ</p>
         </section>
 
+        <section class="container-testimonio">
+            <h3 class="section--title">¿ QUE DICEN NUESTROS CLIENTES ? </h3>
+            <img src="img/testimonio.jpg" alt="" class="testimonio--img">
+            <p class="testimonio--txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae esse rem, quo similique dolores ratione non numquam temporibus porro sequi!</p>
+            <p class="testimonio--name">JESUS MARTINEZ</p>
+        </section>
+
         <section class="container--tips">
             <div class="design--item">
                 <h3 class="design--title">TIP'S & SUGERENCIAS</h3>
@@ -124,7 +131,7 @@
         <div class="column column--50-25">
             <h2 class="footer--title">COMPAÑIA</h2>
             <p class="column--txt">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum quos quae animi cumque soluta. Harum, vero dolor? Asperiores, labore aperiam?</p>
-            <cite class="footer--autor">Adan Ruiz, MD</cite>
+            <cite class="footer--autor">Gonzalo Leon, PM</cite>
         </div>
 
 
